2001-03-10  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1:
	documented xsm DiscardCommand workaround using $SESSION_MANAGER_NAME

	* fvwm/windowlist.c:
	safety fix, this fixes core dump in WindowList under xsm

2001-03-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (DestroyMenu):
	(copy_menu_root):
	fixed handling of continuation menus with dynamic menu actions

	* fvwm/menus.c (pop_menu_down):
	(DestroyMenu):
	(destroy_menu):
	(merge_continuation_menus):
	* fvwm/windowlist.c (do_windowList):
	fixed deleting menus from dynamic menu actions

	* fvwm/menus.c (DestroyMenu):
	Fixed menu list corruption
	(make_menu):
	do not resize menu if it has other mapped copies
	(update_menu):
	do not update menu style for menus with copies
	(DestroyMenu):
	returns if menu was actually destroyed or not

2001-03-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (size_menu_vertically):
	fixed continuation menus with embedded spacing and quoting characters in
	their name

	* libs/Parse.c (EscapeStripng):
	new function

2001-03-04  Dan Espen  <dane@mk.telcordia.com>

	* tests/FvwmButtons/FvwmButtons.sh: Framework for tests.

2001-03-02  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm2.1 (FakeClick): Add example.  Style changes focusing on
	the word "will".

2001-03-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/geometry.c (get_unshaded_geometry):
	* fvwm/update.c (apply_window_updates):
	fixed recapturing shaded windows on pages other than 0 0

	* fvwm/builtins.c (fake_click):
	fixed a bug in button number parsing
	(fake_click):
	properly deliver faked events

	* libs/ColorUtils.c (GetShadowColor):
	(GetHiliteColor):
	finished reverting back to 2.3.22 colour calculations

	* fvwm/menus.c (MenuInteraction):
	fixed busy wait with PopupDelay menu style

2001-03-02  Dan Espen  <dane@mk.telcordia.com>

	* AUTHORS: Added some nice background information for Chuck Hines.

2001-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS, configure.in: