@@ -1,3 +1,8 @@
+2001-03-10  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/menus.c (MenuInteraction):
+	fixed core dump
+
 2001-03-10  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm/fvwm2.1:
